@@ -1,5 +1,4 @@
 /*
-Copyright (C) 1997-2001 Id Software, Inc.
 Copyright (C) 2023-2024 starfrost
 
 This program is free software; you can redistribute it and/or
@@ -105,6 +104,8 @@ void Gameinfo_Load()
 			break;
 		}
 	}
+
+	Com_Printf("Loading game %s from asset path %s...", game_name->string, game_asset_path->string);
 
 	return true;
 }
